# filemanager

./: .gitignore  CMakeLists.txt  README.md  clientFilemanager.cpp  filemanager_imp.h  filemanager_stub.h  operaciones.h  serverFilemanager.cpp
